{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 218,
  "lineage": "2b3cc0f1-be09-ea8f-7dc9-e1788a65c56a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "sg_public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429965675882:security-group/sg-060bb58f426593b27",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-060bb58f426593b27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "429965675882",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Instance SG-cerberus-Dev-virginia",
              "description": "Allow SSH inbound and all outbound traffic"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.15.2",
              "Name": "Public Instance SG-cerberus-Dev-virginia",
              "description": "Allow SSH inbound and all outbound traffic",
              "env": "Dev",
              "name": "prueba",
              "owner": "Alex",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0f652d246ade0504a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "apache",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0cca150d127c2216f",
            "arn": "arn:aws:ec2:us-east-1:429965675882:instance/i-0075cf968a3260b37",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0075cf968a3260b37",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-00eb9eb818f9da6e1"
              }
            ],
            "primary_network_interface_id": "eni-00eb9eb818f9da6e1",
            "private_dns": "ip-10-10-1-92.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.92",
            "public_ip": "54.175.240.177",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "IAC": "Terraform",
                  "IAC_Version": "1.15.2",
                  "env": "Dev",
                  "name": "prueba",
                  "owner": "Alex",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "tags_all": {
                  "IAC": "Terraform",
                  "IAC_Version": "1.15.2",
                  "env": "Dev",
                  "name": "prueba",
                  "owner": "Alex",
                  "project": "cerberus",
                  "region": "virginia"
                },
                "throughput": 125,
                "volume_id": "vol-0e305dd5fda88f541",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0508dc7528338773d",
            "tags": {
              "Name": "apache-cerberus-Dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.15.2",
              "Name": "apache-cerberus-Dev-virginia",
              "env": "Dev",
              "name": "prueba",
              "owner": "Alex",
              "project": "cerberus",
              "region": "virginia"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-060bb58f426593b27"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429965675882",
            "id": "i-0075cf968a3260b37",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_default_security_group.sg_public_instance",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginina",
            "data.aws_key_pair.key_pair"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429965675882:internet-gateway/igw-04e16f9b46ff4a814",
            "id": "igw-04e16f9b46ff4a814",
            "owner_id": "429965675882",
            "region": "us-east-1",
            "tags": {
              "Name": "IGW VIRGINIA-cerberus-Dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.15.2",
              "Name": "IGW VIRGINIA-cerberus-Dev-virginia",
              "env": "Dev",
              "name": "prueba",
              "owner": "Alex",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0f652d246ade0504a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_virginina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429965675882:route-table/rtb-0178235b343a03a5d",
            "id": "rtb-0178235b343a03a5d",
            "owner_id": "429965675882",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04e16f9b46ff4a814",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public crt-cerberus-Dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.15.2",
              "Name": "public crt-cerberus-Dev-virginia",
              "env": "Dev",
              "name": "prueba",
              "owner": "Alex",
              "project": "cerberus",
              "region": "virginia"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f652d246ade0504a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429965675882",
            "id": "rtb-0178235b343a03a5d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.vpc_virginina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "crta_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d683789c658a36b",
            "region": "us-east-1",
            "route_table_id": "rtb-0178235b343a03a5d",
            "subnet_id": "subnet-0508dc7528338773d"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429965675882",
            "id": "rtbassoc-08d683789c658a36b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429965675882:subnet/subnet-0e338a2eb18d631e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e338a2eb18d631e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "429965675882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Private_Subnet-cerberus-Dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.15.2",
              "Name": "Private_Subnet-cerberus-Dev-virginia",
              "env": "Dev",
              "name": "prueba",
              "owner": "Alex",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0f652d246ade0504a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429965675882",
            "id": "subnet-0e338a2eb18d631e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.public_subnet",
            "aws_vpc.vpc_virginina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429965675882:subnet/subnet-0508dc7528338773d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0508dc7528338773d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "429965675882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Public_Subnet-cerberus-Dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.15.2",
              "Name": "Public_Subnet-cerberus-Dev-virginia",
              "env": "Dev",
              "name": "prueba",
              "owner": "Alex",
              "project": "cerberus",
              "region": "virginia"
            },
            "vpc_id": "vpc-0f652d246ade0504a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429965675882",
            "id": "subnet-0508dc7528338773d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.vpc_virginina"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_virginina",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:429965675882:vpc/vpc-0f652d246ade0504a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08847d8cdfe20382f",
            "default_route_table_id": "rtb-002cac960786b9690",
            "default_security_group_id": "sg-060bb58f426593b27",
            "dhcp_options_id": "dopt-08b8dbdf19ef9b4cd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f652d246ade0504a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-002cac960786b9690",
            "owner_id": "429965675882",
            "region": "us-east-1",
            "tags": {
              "Name": "VPC_VIRGINIA-cerberus-Dev-virginia"
            },
            "tags_all": {
              "IAC": "Terraform",
              "IAC_Version": "1.15.2",
              "Name": "VPC_VIRGINIA-cerberus-Dev-virginia",
              "env": "Dev",
              "name": "prueba",
              "owner": "Alex",
              "project": "cerberus",
              "region": "virginia"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "429965675882",
            "id": "vpc-0f652d246ade0504a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}